Renamed startDelay to delay across files

--- a/demos/car-demo.html
+++ b/demos/car-demo.html
@@ -148,13 +148,13 @@
           {"backgroundColor": lightOff}, {iterationDuration: 0.5}),
       new Animation(document.querySelector("#orangeLight"),
           {"backgroundColor": "rgb(255,165,0)"}, {iterationDuration: 0.5}),
-    ], {startDelay: 0.25}),
+    ], {delay: 0.25}),
     new ParGroup([
       new Animation(document.querySelector("#orangeLight"),
           {"backgroundColor": lightOff}, {iterationDuration: 0.5}),
       new Animation(document.querySelector("#redLight"),
           {"backgroundColor": "red"}, {iterationDuration: 0.5}),
-    ], {startDelay: 0.25}),
+    ], {delay: 0.25}),
     new Animation(document.querySelector(".car"),
         [{left: "-500px"}, {left: "10px"}],
         {iterationDuration: 2, timingFunction: "ease-out"}),
