--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -92,11 +92,11 @@ limitations under the License.
         {"backgroundColor": "lightsteelblue"},
       ], 8);
       var around3 = new Animation(document.querySelector("#a"), {top: "250px"},
-          {startDelay: 2, iterationDuration: 2});
+          {delay: 2, iterationDuration: 2});
       var around4 = new Animation(document.querySelector("#a"), {left: "0px"},
-          {startDelay: 4, iterationDuration: 2});
+          {delay: 4, iterationDuration: 2});
       var around5 = new Animation(document.querySelector("#a"), {top: "0px"},
-          {startDelay: 6, iterationDuration: 2});
+          {delay: 6, iterationDuration: 2});
       var blueBallMove = new ParGroup(
           [around1, around2, around3, around4, around5],
           {iterationCount: 2, direction: "alternate"});
