--- a/test/testcases/auto-test-font-weight.html
+++ b/test/testcases/auto-test-font-weight.html
@@ -39,5 +39,5 @@ limitations under the License.
 "use strict";
 document.timeline.play(new Animation(document.querySelector('#test'),
     [{fontWeight: '100'}, {fontWeight: '900'}],
-    {iterationDuration: 1, startDelay: 1}));
+    {iterationDuration: 1, delay: 1}));
 </script>
