--- a/test/testcases/auto-test-iterations-fill.html
+++ b/test/testcases/auto-test-iterations-fill.html
@@ -129,7 +129,7 @@ var groups = [];
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
   groups.push(new ParGroup([], {
-    startDelay: 1,
+    delay: 1,
     iterationDuration: 8,
     iterationCount: 3,
     playbackRate: 2,
@@ -145,14 +145,14 @@ for (var i = 0; i < fillModes.length; i++) {
   var divs = document.querySelectorAll(categories[i]);
   for (var j = 0; j < divs.length; j++) {
     groups[j].append(new Animation(divs[j], [{left: "100px"}, {left: "200px"}], {
-      startDelay: 1,
+      delay: 1,
       iterationDuration: 1,
       iterationCount: 2,
       fillMode: fillModes[i],
       playbackRate: 0.8
     }));
     groups[j].append(new Animation(divs[j], {sample: sampleFunc}, {
-      startDelay: 1,
+      delay: 1,
       iterationDuration: 1,
       iterationCount: 2,
       fillMode: fillModes[i],
