--- a/test/testcases/auto-test-keyframe-creation.html
+++ b/test/testcases/auto-test-keyframe-creation.html
@@ -84,9 +84,9 @@ limitations under the License.
 var dt = document.timeline;
 
 dt.play(new Animation(document.querySelector("#a"),
-    [{left: "100px"}, {left: "200px"}], {startDelay: 1, iterationDuration: 1}));
+    [{left: "100px"}, {left: "200px"}], {delay: 1, iterationDuration: 1}));
 dt.play(new Animation(document.querySelector("#b"), {left: "200px"},
-    {startDelay: 1, iterationDuration: 1}));
+    {delay: 1, iterationDuration: 1}));
 dt.play(new Animation(document.querySelector("#c"),
     [{left: "100px"}, {left: "200px"}], {iterationDuration: 2}));
 dt.play(new Animation(document.querySelector("#d"), {left: "200px"},
