--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -45,7 +45,7 @@ timing_test(function() {
   at(1, function() {
     assert_styles(element, {top: '100px'});
 
-    anim2.specified.startDelay = -1;
+    anim2.specified.delay = -1;
     assert_styles(element, {top: '200px'});
   });
 }, 'Updated style should be visible after change to specified timing');
@@ -93,7 +93,7 @@ timing_test(function() {
       group.append(group);
     } catch (e) {
     }
-    anim3.specified.startDelay = -1;
+    anim3.specified.delay = -1;
     assert_styles(element, {bottom: '600px'});
   });
 }, 'Updated style should be visible despite unrelated errors');
