--- a/test/testcases/manual-test-preset-timings.html
+++ b/test/testcases/manual-test-preset-timings.html
@@ -53,7 +53,7 @@ function testTiming(name) {
       target.stroke();
     },
   }, {
-    iterationDuration: duration,
+    duration: duration,
     timingFunction: name,
   });
 }
