--- a/test/testcases/manual-test-step.html
+++ b/test/testcases/manual-test-step.html
@@ -65,7 +65,7 @@ function testStep(numSteps, position) {
       target.stroke();
     },
   }, {
-    iterationDuration: duration,
+    duration: duration,
     timingFunction: 'steps(' + numSteps + ', ' + position + ')',
   });
 }
