--- a/test/testcases/test-getcurrent.html
+++ b/test/testcases/test-getcurrent.html
@@ -42,8 +42,8 @@
 var a = document.querySelector("#a");
 var b = document.querySelector("#b");
 
-var animationA = new Animation(a, {"left": "100%"}, {iterationDuration: 10});
-var animationB = new Animation(b, {"left": "100%"}, {iterationDuration: 10});
+var animationA = new Animation(a, {"left": "100%"}, {duration: 10});
+var animationB = new Animation(b, {"left": "100%"}, {duration: 10});
 var animationAClone = animationA.clone();
 var animationBClone = animationB.clone();
 
