--- a/test/testcases/auto-test-iteration-start.html
+++ b/test/testcases/auto-test-iteration-start.html
@@ -125,7 +125,7 @@ var effect100To180 = [{left: "100px"}, {left: "180px"}];
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
   groups.push(
-      new ParGroup([], {iterationCount: 2, direction: dir, iterationDuration: 4}));
+      new ParGroup([], {iterationCount: 2, direction: dir, duration: 4}));
 }
 
 for (var i = 0; i < containers.length; i++) {
@@ -133,28 +133,28 @@ for (var i = 0; i < containers.length; i++) {
   // Test basic use.
   groups[i].append(new Animation(container.getElementsByClassName("a")[0],
       effect100To300,
-      {iterationDuration: 1, iterationCount: 3.1, iterationStart: 0.3}));
+      {duration: 1, iterationCount: 3.1, iterationStart: 0.3}));
   groups[i].append(new Animation(container.getElementsByClassName("b")[0],
       effect100To300,
-      {iterationDuration: 1, iterationCount: 3.6, iterationStart: -0.2}));
+      {duration: 1, iterationCount: 3.6, iterationStart: -0.2}));
   // Test that iterationStart is not clipped to iterationCount.
   groups[i].append(new Animation(container.getElementsByClassName("c")[0],
       effect100To300,
-      {iterationDuration: 1, iterationCount: 1.6, iterationStart: 1.8}));
+      {duration: 1, iterationCount: 1.6, iterationStart: 1.8}));
   // Test that nothing odd happens when iterationCount is an integer.
   groups[i].append(new Animation(container.getElementsByClassName("d")[0],
       effect100To300,
-      {iterationDuration: 1, iterationCount: 3.0, iterationStart: 0.4}));
+      {duration: 1, iterationCount: 3.0, iterationStart: 0.4}));
   // Test that nothing odd happens when (iterationCount - iterationStart) is an
   // integer.
   groups[i].append(new Animation(container.getElementsByClassName("e")[0],
       effect100To300,
-      {iterationDuration: 1, iterationCount: 3.2, iterationStart: 0.2}));
+      {duration: 1, iterationCount: 3.2, iterationStart: 0.2}));
   // Test that nothing odd happens when (iterationCount + iterationStart) is an
   // integer.
   groups[i].append(new Animation(container.getElementsByClassName("f")[0],
       effect100To180,
-      {iterationDuration: 1, iterationCount: 2.8, iterationStart: 0.2}));
+      {duration: 1, iterationCount: 2.8, iterationStart: 0.2}));
   document.timeline.play(groups[i]);
 }
 </script>
