--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -108,25 +108,25 @@ var expected_failures = {
 var animFunc1 = new PathAnimationEffect(
     document.querySelector('#path1').pathSegList, 'auto-rotate');
 document.timeline.play(new Animation(document.querySelector("#anim1"),
-    animFunc1, {iterationDuration: 10, iterationCount: 2}));
+    animFunc1, {duration: 10, iterationCount: 2}));
 
 var animFunc2 = new PathAnimationEffect(
     document.querySelector('#path2').pathSegList, 'auto-rotate');
 document.timeline.play(new Animation(document.querySelector("#anim2"),
-    animFunc2, {iterationDuration: 10, iterationCount: 2}));
+    animFunc2, {duration: 10, iterationCount: 2}));
 
 var animFunc3 = new PathAnimationEffect(
     document.querySelector('#path3').pathSegList, 'auto-rotate');
 document.timeline.play(new Animation(
     document.querySelector("#anim3"), animFunc3,
-    {iterationDuration: 10, iterationCount: 2, timingFunction: "paced"}));
+    {duration: 10, iterationCount: 2, timingFunction: "paced"}));
 
 var animFunc4KeyFrames = new KeyframeAnimationEffect(
     [{transform: "translate(387.5px, 287.5px) rotate(180deg)"}], "replace");
 var animFunc4Path = new PathAnimationEffect(
     document.querySelector('#path4').pathSegList, 'auto-rotate');
 var anim4 = new Animation(document.querySelector("#anim4"), animFunc4Path,
-    {iterationDuration: 10, iterationCount: 2, timingFunction: "paced"});
+    {duration: 10, iterationCount: 2, timingFunction: "paced"});
 document.timeline.play(anim4);
 
 testharness_timeline.schedule(function() {
