--- a/test/testcases/test-events.html
+++ b/test/testcases/test-events.html
@@ -110,26 +110,26 @@ function simple(timing) {
 testTiming(simple(10),
   [event('start', 0, 0, 0), event('end', 10, 10, 0)],
   "simple animation");
-testTiming(simple({iterationDuration: 2, iterationCount: 5}),
+testTiming(simple({duration: 2, iterationCount: 5}),
   [event('start', 0, 0, 0)].concat(iterList(2, 2, 1, 2, 4))
                         .concat([event('end', 10, 10, 4)]),
   "simple iterations");
-testTiming(simple({iterationDuration: 4, iterationStart: 0.5,
+testTiming(simple({duration: 4, iterationStart: 0.5,
                    iterationCount: 2.5}),
   [event('start', 0, 0, 0)].concat(iterList(2, 2, 1, 4, 2))
                         .concat([event('end', 10, 10, 2)]),
   "offset iterations (coincident ends)");
-testTiming(simple({iterationDuration: 4, iterationStart: 0.3,
+testTiming(simple({duration: 4, iterationStart: 0.3,
                    iterationCount: 2.5}),
   [event('start', 0, 0, 0)].concat(iterList(2.8, 2.8, 1, 4, 2))
                         .concat([event('end', 10, 10, 2)]),
   "offset iterations (one complete iteration)");
-testTiming(simple({iterationDuration: 4, iterationStart: 0.75,
+testTiming(simple({duration: 4, iterationStart: 0.75,
                    iterationCount: 2.5}),
   [event('start', 0, 0, 0)].concat(iterList(1, 1, 1, 4, 3))
                         .concat([event('end', 10, 10, 3)]),
   "offset iterations (two complete iterations)");
-testTiming(simple({iterationDuration: 5, delay: 5}),
+testTiming(simple({duration: 5, delay: 5}),
   [event('start', 5, 5, 0), event('end', 10, 10, 0)],
   "delayed start");
 
@@ -149,7 +149,7 @@ testTiming(new SeqGroup([simple(5), simple(5)]),
    event('end', 5, 10, 0, child(1)), event('end', 10, 10, 0)],
    "seq group with multiple children");
 
-testTiming(new ParGroup([simple(5)], {iterationDuration: 5, 
+testTiming(new ParGroup([simple(5)], {duration: 5, 
                                        iterationCount: 2}),
   [event('start', 0, 0, 0), event('start', 0, 0, 0, child(0)),
    event('end', 5, 5, 0, child(0)), event('iteration', 5, 5, 1),
@@ -160,7 +160,7 @@ testTiming(new ParGroup([simple(5)], {iterationDuration: 5,
 // child at (0.5, 2.5, 4.5)
 // parent at ((-3), 2, 7)
 // result: child iterations at 1.5 | 2.5 4.5 6.5 | 7.5 9.5
-testTiming(new ParGroup([simple({iterationDuration: 2, iterationStart: 0.75,
+testTiming(new ParGroup([simple({duration: 2, iterationStart: 0.75,
                                  iterationCount: 2.5})],
                         {iterationStart: 0.6, iterationCount: 2}),
   [event('start', 0, 0, 0), event('iteration', 4.5, 1.5, 3, child(0)), 
@@ -173,17 +173,17 @@ testTiming(new ParGroup([simple({iterationDuration: 2, iterationStart: 0.75,
     concat([event('end', 10, 10, 2)]),
    "nested offset iterations");
 
-testTiming(simple({iterationDuration: 10, playbackRate: 2}),
+testTiming(simple({duration: 10, playbackRate: 2}),
   [event('start', 0, 0, 0), event('end', 5, 5, 0)],
   "simple animation with non-unit playbackRate");
 
-testTiming(new ParGroup([simple({iterationDuration: 10, playbackRate: 4})], 
+testTiming(new ParGroup([simple({duration: 10, playbackRate: 4})], 
            {playbackRate: 0.5}),
   [event('start', 0, 0, 0), event('start', 0, 0, 0, child(0)),
    event('end', 2.5, 5, 0, child(0)), event('end', 5, 5, 0)],
    "nested non-unit playbackRates");
 
-testTiming(new ParGroup([simple({iterationCount: 2, iterationDuration: 2.5, 
+testTiming(new ParGroup([simple({iterationCount: 2, duration: 2.5, 
                                  playbackRate: 4})],
            {playbackRate: 0.5, iterationCount: 2}),
   [event('start', 0, 0, 0), event('start', 0, 0, 0, child(0)),
