--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -59,7 +59,7 @@ timing_test(function() {
   at(2, function() {
     assert_styles(element, {right: '100px'});
 
-    group.children[0].specified.iterationDuration = 0.5;
+    group.children[0].specified.duration = 0.5;
     assert_styles(element, {right: '150px'});
 
     group.children[0].remove();
