--- a/test/testcases/auto-test-fill-values.html
+++ b/test/testcases/auto-test-fill-values.html
@@ -119,7 +119,7 @@ for (var i = 0; i < containers.length; i++) {
           iterationCount: 4,
           direction: directions[i],
           duration: 1,
-          fillMode: fills[j]
+          fill: fills[j]
         }));
     divs[2 * j].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] +
         " dur: 1";
@@ -128,7 +128,7 @@ for (var i = 0; i < containers.length; i++) {
           iterationCount: 4,
           direction: directions[i],
           duration: 0,
-          fillMode: fills[j]
+          fill: fills[j]
         }));
     divs[2 * j + 1].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] +
         " dur: 0";
