--- a/test/testcases/auto-test-iterations-fill.html
+++ b/test/testcases/auto-test-iterations-fill.html
@@ -120,7 +120,7 @@ limitations under the License.
 <script>
 "use strict";
 
-var fillModes = ["none", "backwards", "forwards", "both"];
+var fills = ["none", "backwards", "forwards", "both"];
 var categories = [".a", ".b", ".c", ".d"]
 
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"]
@@ -141,21 +141,21 @@ function sampleFunc(timeFraction, iteration, target) {
   target.innerHTML = Math.floor(timeFraction * 1000) / 1000 + " : " + iteration;
 }
 
-for (var i = 0; i < fillModes.length; i++) {
+for (var i = 0; i < fills.length; i++) {
   var divs = document.querySelectorAll(categories[i]);
   for (var j = 0; j < divs.length; j++) {
     groups[j].append(new Animation(divs[j], [{left: "100px"}, {left: "200px"}], {
       delay: 1,
       duration: 1,
       iterationCount: 2,
-      fillMode: fillModes[i],
+      fill: fills[i],
       playbackRate: 0.8
     }));
     groups[j].append(new Animation(divs[j], {sample: sampleFunc}, {
       delay: 1,
       duration: 1,
       iterationCount: 2,
-      fillMode: fillModes[i],
+      fill: fills[i],
       playbackRate: 0.8
     }));
   }
